--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -191,6 +191,12 @@
     <figure class="gallery__item gallery__item--6">
       <img src="https://via.placeholder.com/300" class="gallery__img lazyload" alt="Image 6">
     </figure>
+    <figure class="gallery__item gallery__item--7">
+      <img src="https://via.placeholder.com/300" class="gallery__img lazyload" alt="Image 7">
+    </figure>
+    <figure class="gallery__item gallery__item--8">
+      <img src="https://via.placeholder.com/300" class="gallery__img lazyload" alt="Image 8">
+    </figure>
   </div>
 </section>
 <section id="contact" class="section is-medium">
