--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,9 +5,9 @@
   font-style: normal;
   font-weight: 400;
   src: local(""),
-    url("./fonts/open-sans-v18-latin-regular.woff2") format("woff2"),
+    url("../fonts/open-sans-v18-latin-regular.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("./fonts/open-sans-v18-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("../fonts/open-sans-v18-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* gravitas-one-regular - latin */
 @font-face {
@@ -15,27 +15,26 @@
   font-style: normal;
   font-weight: 400;
   src: local(""),
-    url("./fonts/gravitas-one-v10-latin-regular.woff2") format("woff2"),
+    url("../fonts/gravitas-one-v10-latin-regular.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("./fonts/gravitas-one-v10-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("../fonts/gravitas-one-v10-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* Base Settings */
 .container {
   max-width: 1140px !important;
 }
-body {
-  h1,
-  h2,
-  h3,
-  h4 {
-    font-family: "Gravitas One", sans-serif;
-  }
-  p,
-  a,
-  li {
-    font-family: "Open Sans", sans-serif;
-  }
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Gravitas One", sans-serif;
+}
+p,
+a,
+li {
+  font-family: "Open Sans", sans-serif;
 }
 ul {
   list-style: circle;
