--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,9 +5,9 @@
   font-style: normal;
   font-weight: 400;
   src: local(""),
-    url("https://saltybuns.netlify.app/fonts/open-sans-v18-latin-regular.woff2") format("woff2"),
+    url("fonts/open-sans-v18-latin-regular.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("https://saltybuns.netlify.app/fonts/open-sans-v18-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("fonts/open-sans-v18-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* gravitas-one-regular - latin */
 @font-face {
@@ -15,9 +15,9 @@
   font-style: normal;
   font-weight: 400;
   src: local(""),
-    url("https://saltybuns.netlify.app/fonts/gravitas-one-v10-latin-regular.woff2") format("woff2"),
+    url("fonts/gravitas-one-v10-latin-regular.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("https://saltybuns.netlify.app/fonts/gravitas-one-v10-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("fonts/gravitas-one-v10-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* Base Settings */
@@ -81,6 +81,7 @@ ul {
 .title {
   font-size: 5rem !important;
   color: black;
+  font-family: 'Gravitas One' sans-serif;
 }
 .subtitle {
   font-size: 2rem;
