--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -81,7 +81,7 @@ ul {
 .title {
   font-size: 5rem !important;
   color: black;
-  font-family: 'Gravitas One' sans-serif;
+  font-family: "Gravitas One", sans-serif;
 }
 .subtitle {
   font-size: 2rem;
