--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,8 +28,9 @@
 h1,
 h2,
 h3,
-h4 {
-  font-family: "Gravitas One", sans-serif;
+h4,
+.is-size-1, .is-size-2, .is-size-3, .is-size-4 {
+  font-family: "Gravitas One", sans-serif !important;
 }
 p,
 a,
