--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,28 +9,47 @@
     /* Chrome 26+, Opera 23+, Firefox 39+ */
       url("fonts/open-sans-v18-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: url('/fonts/open-sans-v18-latin-600.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('/fonts/open-sans-v18-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/open-sans-v18-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/open-sans-v18-latin-600.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/open-sans-v18-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/open-sans-v18-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
+}
 /* gravitas-one-regular - latin */
 @font-face {
-  font-family: "Gravitas One";
+  font-family: 'Gravitas One';
   font-style: normal;
   font-weight: 400;
-  src: local(""),
-    url("fonts/gravitas-one-v10-latin-regular.woff2") format("woff2"),
-    /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("fonts/gravitas-one-v10-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url('/fonts/gravitas-one-v10-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('/fonts/gravitas-one-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/gravitas-one-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/gravitas-one-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/gravitas-one-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/gravitas-one-v10-latin-regular.svg#GravitasOne') format('svg'); /* Legacy iOS */
 }
 
 /* Base Settings */
 .container {
   max-width: 1140px !important;
 }
+$family-primary: "Gravitas One", sans-serif;
+$family-secondary: "Open Sans", sans-serif;
 
-
-p,
-a,
-li {
-  font-family: "Open Sans", sans-serif;
+h1,h2,h3,h4 {
+  font-family: $family-primary;
 }
+p, li, a {
+  font-family: $family-secondary;
+}
+
 ul {
   list-style: circle;
   padding-left: 20px;
@@ -76,7 +95,6 @@ ul {
 .title {
   font-size: 5rem !important;
   color: black;
-  font-family: "Gravitas One", sans-serif;
 }
 .subtitle {
   font-size: 2rem;
@@ -134,7 +152,6 @@ ul {
   right: 0;
   font-size: 1.05rem;
   font-weight: 700;
-  font-family: "Open Sans";
 
   .price_prefix {
     font-weight: 400;
@@ -143,9 +160,8 @@ ul {
 }
 
 .menu__item--price2 {
-  font-size: 1.05rem !important;
-  font-weight: 700 !important;
-  font-family: "Open Sans";
+  font-size: 1.05rem;
+  font-weight: 700;
 
   .price_prefix {
     font-weight: 400;
