--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,35 +5,32 @@
   font-style: normal;
   font-weight: 400;
   src: local(""),
-    url("fonts/open-sans-v18-latin-regular.woff2") format("woff2"),
+    url('../fonts/open-sans-v18-latin-regular.woff2') format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("fonts/open-sans-v18-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url('../fonts/open-sans-v18-latin-regular.woff') format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  src: url('/fonts/open-sans-v18-latin-600.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/open-sans-v18-latin-600.woff'); /* IE9 Compat Modes */
   src: local(''),
-       url('/fonts/open-sans-v18-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/fonts/open-sans-v18-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/open-sans-v18-latin-600.woff') format('woff'), /* Modern Browsers */
-       url('/fonts/open-sans-v18-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/fonts/open-sans-v18-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
+       url('../fonts/open-sans-v18-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/open-sans-v18-latin-600.woff') format('woff'), /* Modern Browsers */
 }
 /* gravitas-one-regular - latin */
 @font-face {
   font-family: 'Gravitas One';
   font-style: normal;
   font-weight: 400;
-  src: url('/fonts/gravitas-one-v10-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/gravitas-one-v10-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('/fonts/gravitas-one-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/fonts/gravitas-one-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/fonts/gravitas-one-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('/fonts/gravitas-one-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/fonts/gravitas-one-v10-latin-regular.svg#GravitasOne') format('svg'); /* Legacy iOS */
+       url('../fonts/gravitas-one-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/gravitas-one-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/gravitas-one-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/gravitas-one-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/gravitas-one-v10-latin-regular.svg#GravitasOne') format('svg'); /* Legacy iOS */
 }
 
 /* Base Settings */
