--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,28 +4,28 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  src: local("../fonts/open-sans-v18-latin-regular.woff2"),
-    url("../fonts/open-sans-v18-latin-regular.woff2") format("woff2"),
+  src: local("Open Sans"),
+    url("/fonts/open-sans-v18-latin-regular.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url("../fonts/open-sans-v18-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    url("/fonts/open-sans-v18-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 @font-face {
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
-  src: local("../fonts/open-sans-v18-latin-regular.woff2"),
-       url("../fonts/open-sans-v18-latin-600.woff2") format("woff2"), /* Super Modern Browsers */
-       url('../fonts/open-sans-v18-latin-600.woff') format("woff"), /* Modern Browsers */
+  src: local("Open Sans"),
+       url("/fonts/open-sans-v18-latin-600.woff2") format("woff2"), /* Super Modern Browsers */
+       url('/fonts/open-sans-v18-latin-600.woff') format("woff"), /* Modern Browsers */
 }
 /* gravitas-one-regular - latin */
 @font-face {
   font-family: "Gravitas One";
   font-style: normal;
   font-weight: 400;
-  src: local("../fonts/open-sans-v18-latin-regular.woff2"),
-       url("../fonts/gravitas-one-v10-latin-regular.woff2") format("woff2"), /* Super Modern Browsers */
-       url("../fonts/gravitas-one-v10-latin-regular.woff") format("woff"), /* Modern Browsers */
+  src: local("Gravitas One"),
+       url("/fonts/gravitas-one-v10-latin-regular.woff2") format("woff2"), /* Super Modern Browsers */
+       url("/fonts/gravitas-one-v10-latin-regular.woff") format("woff"), /* Modern Browsers */
 }
 
 /* Base Settings */
