--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -50,6 +50,9 @@ ul {
 .has-font-size-small {
   font-size: 0.95rem;
 }
+.is-size-2 {
+  font-size: 3rem !important;
+}
 .is-size-2,
 .is-size-3 {
   color: black;
@@ -85,7 +88,7 @@ ul {
   }
 }
 .title {
-  font-size: 5rem !important;
+  font-size: 4.2rem !important;
   color: black;
 }
 .subtitle {
