--- a/assets/scss/utility.scss
+++ b/assets/scss/utility.scss
@@ -2,6 +2,9 @@
 .has-text-uppercase {
   text-transform: uppercase;
 }
+.has-text-capitalized {
+  text-transform: capitalize;
+}
 .divider {
   max-width: 200px;
   height: 10px;
