--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
 
     <div class="column is-6 is-flex is-justified-center is-aligned-center">
 
-      <img src="{{ $.Site.Params.imagekit_base_url }}tr:w-250,ar-1-1/{{ $.Site.Params.schema.logo }}" sizes="100vw"  alt="{{ .Site.Params.name }} logo" class="lazyload">
+      <img src="{{ $.Site.Params.imagekit_base_url }}tr:w-250/{{ $.Site.Params.schema.logo }}" sizes="100vw"  alt="{{ .Site.Params.name }} logo" class="lazyload">
     </div>
 
     <div class="column is-3">
