--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -51,7 +51,8 @@ ul {
   font-size: 0.95rem;
 }
 .is-size-2 {
-  font-size: 3rem !important;
+  font-size: 2.5rem !important;
+  text-transform: uppercase;
 }
 .is-size-2,
 .is-size-3 {
@@ -109,7 +110,7 @@ ul {
     display: none;
   }
   .title {
-    font-size: 3rem !important;
+    font-size: 2.7rem !important;
   }
   .subtitle {
     font-size: 1.6rem;
@@ -174,6 +175,9 @@ ul {
   .menu__item--desc {
     font-size: 0.9rem;
   }
+}
+.has-text-black {
+  color: black !important;
 }
 /*----------*/
 
