--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -65,6 +65,14 @@
   <!-- Mobile Menu -->
   <div class="navbar is-fixed-top menu-wrap mobile">
 
+    <div class="navbar-brand is-flex is-row is-aligned-center">
+
+      <a class="menu_logo" href="{{ .Site.BaseURL }}">
+        <img src="{{ $.Site.Params.imagekit_base_url }}tr:w-250/{{ $.Site.Params.schema.logo }}" sizes="100vw"  alt="{{ .Site.Params.name }} logo">
+      </a>
+  
+    </div>
+    
     <input type="checkbox" class="toggler">
   
     <div class="hamburger"><div></div></div>
