--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -14,7 +14,7 @@
             </p>
           </div>
           <div class="">
-            <img src="{{ $.Site.Params.imagekit_base_url }}tr:w-1000/{{ .Params.hero_img }}" size="100vw" width="800px;" alt="{{ .Site.Params.name }}">
+            <img src="{{ $.Site.Params.imagekit_base_url }}tr:w-800/{{ .Params.hero_img }}" width="800px;" alt="{{ .Site.Params.name }}">
           </div>
           <div class="hero__cta--mobile">
             <a href="tel:{{ .Site.Params.schema.phone }}" class="button is-primary is-large">Call Now To Order</a>
@@ -152,29 +152,111 @@
 <section id="section4">
   <div class="gallery" id="photo">
     <figure class="gallery__item gallery__item--1">
-      <img src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-auto/C047589F-599B-49EF-84DE-E0F6F20EC587_GZa4-qVGz.JPG" sizes="50vw" class="gallery__img lazyload" alt="Image 1">
-    </figure>
+
+      <img
+      src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50/C047589F-599B-49EF-84DE-E0F6F20EC587_GZa4-qVGz.JPG"
+      sizes="100vw"
+      data-srcset="
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250/C047589F-599B-49EF-84DE-E0F6F20EC587_GZa4-qVGz.JPG 400w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/C047589F-599B-49EF-84DE-E0F6F20EC587_GZa4-qVGz.JPG 768w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400/C047589F-599B-49EF-84DE-E0F6F20EC587_GZa4-qVGz.JPG 1024w"
+      data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/C047589F-599B-49EF-84DE-E0F6F20EC587_GZa4-qVGz.JPG 768w"
+      class="lazyload gallery__img" />
+
+      </figure>
+
     <figure class="gallery__item gallery__item--2">
-      <img src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-auto/WestCoastSaltyBuns__food--8_0gvC_zSHFV.jpg" sizes="50vw" class="gallery__img lazyload" alt="Image 1">
+
+      <img
+      src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50/WestCoastSaltyBuns__food--8_0gvC_zSHFV.jpg"
+      sizes="100vw"
+      data-srcset="
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250/WestCoastSaltyBuns__food--8_0gvC_zSHFV.jpg 400w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--8_0gvC_zSHFV.jpg 768w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400/WestCoastSaltyBuns__food--8_0gvC_zSHFV.jpg 1024w"
+      data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--8_0gvC_zSHFV.jpg 768w"
+      class="lazyload gallery__img" />
+
     </figure>
     <figure class="gallery__item gallery__item--3">
-      <img src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-auto/WestCoastSaltyBuns__food--1_FuX-spLpSK.jpg" sizes="50vw" class="gallery__img lazyload" alt="Image 1">
+
+      <img
+      src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50/WestCoastSaltyBuns__food--1_FuX-spLpSK.jpg"
+      sizes="100vw"
+      data-srcset="
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250/WestCoastSaltyBuns__food--1_FuX-spLpSK.jpg 400w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--1_FuX-spLpSK.jpg 768w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400/WestCoastSaltyBuns__food--1_FuX-spLpSK.jpg 1024w"
+      data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--1_FuX-spLpSK.jpg 768w"
+      class="lazyload gallery__img" />
+
     </figure>
     <figure class="gallery__item gallery__item--4">
-      <img src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-auto/WestCoastSaltyBuns__food--5_pLkKjSib0R.jpg" sizes="50vw" class="gallery__img lazyload" alt="Image 1">
+
+      <img
+      src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50/WestCoastSaltyBuns__food--5_pLkKjSib0R.jpg"
+      sizes="100vw"
+      data-srcset="
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250/WestCoastSaltyBuns__food--5_pLkKjSib0R.jpg 400w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--5_pLkKjSib0R.jpg 768w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400/WestCoastSaltyBuns__food--5_pLkKjSib0R.jpg 1024w"
+      data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--5_pLkKjSib0R.jpg 768w"
+      class="lazyload gallery__img" />
+      
     </figure>
     <figure class="gallery__item gallery__item--5">
-      <img src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-auto/254C985A-9F7B-4BFB-9752-6EFD9447FDA3_HPQJ36G7l.JPG" sizes="50vw" class="gallery__img lazyload" alt="Image 1">
-    </figure>
+
+      <img
+      src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50/254C985A-9F7B-4BFB-9752-6EFD9447FDA3_HPQJ36G7l.JPG"
+      sizes="100vw"
+      data-srcset="
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250/254C985A-9F7B-4BFB-9752-6EFD9447FDA3_HPQJ36G7l.JPG 400w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/254C985A-9F7B-4BFB-9752-6EFD9447FDA3_HPQJ36G7l.JPG 768w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400/254C985A-9F7B-4BFB-9752-6EFD9447FDA3_HPQJ36G7l.JPG 1024w"
+      data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/254C985A-9F7B-4BFB-9752-6EFD9447FDA3_HPQJ36G7l.JPG 768w"
+      class="lazyload gallery__img" />
+
+      </figure>
     <figure class="gallery__item gallery__item--6">
-      <img src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-auto/WestCoastSaltyBuns__food--6_CYuJWHosh.jpg" sizes="50vw" class="gallery__img lazyload" alt="Image 1">
-    </figure>
+
+      <img
+      src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50/WestCoastSaltyBuns__food--6_CYuJWHosh.jpg"
+      sizes="100vw"
+      data-srcset="
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250/WestCoastSaltyBuns__food--6_CYuJWHosh.jpg 400w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--6_CYuJWHosh.jpg 768w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400/WestCoastSaltyBuns__food--6_CYuJWHosh.jpg 1024w"
+      data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--6_CYuJWHosh.jpg 768w"
+      class="lazyload gallery__img" />
+
+      </figure>
     <figure class="gallery__item gallery__item--7">
-      <img src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-auto/WestCoastSaltyBuns__food--7_1zBORLboE.jpg" sizes="50vw" class="gallery__img lazyload" alt="Image 1">
-    </figure>
+
+      <img
+      src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50/WestCoastSaltyBuns__food--7_1zBORLboE.jpg"
+      sizes="100vw"
+      data-srcset="
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250/WestCoastSaltyBuns__food--7_1zBORLboE.jpg 400w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--7_1zBORLboE.jpg 768w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400/WestCoastSaltyBuns__food--7_1zBORLboE.jpg 1024w"
+      data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--7_1zBORLboE.jpg 768w"
+      class="lazyload gallery__img" />
+
+      </figure>
     <figure class="gallery__item gallery__item--8">
-      <img src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-auto/WestCoastSaltyBuns__food--2_KtoTDO36fP.jpg" sizes="50vw" class="gallery__img lazyload" alt="Image 1">
-    </figure>
+
+      <img
+      src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50/WestCoastSaltyBuns__food--2_KtoTDO36fP.jpg"
+      sizes="100vw"
+      data-srcset="
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250/WestCoastSaltyBuns__food--2_KtoTDO36fP.jpg 400w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--2_KtoTDO36fP.jpg 768w,
+      {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-400/WestCoastSaltyBuns__food--2_KtoTDO36fP.jpg 1024w"
+      data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/WestCoastSaltyBuns__food--2_KtoTDO36fP.jpg 768w"
+      class="lazyload gallery__img" />
+
+
+       </figure>
   </div>
 </section>
 <section id="contact" class="section is-medium">
