--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -14,7 +14,18 @@
             </p>
           </div>
           <div class="">
-            <img src="{{ $.Site.Params.imagekit_base_url }}tr:w-800/{{ .Params.hero_img }}" width="800px;" alt="{{ .Site.Params.name }}">
+
+            <img
+            src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350,bl-30,q-50/{{ .Params.hero_img }}"
+            sizes="100vw"
+            data-srcset="
+            {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-250/{{ .Params.hero_img }} 400w,
+            {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/{{ .Params.hero_img }} 768w,
+            {{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-450/{{ .Params.hero_img }} 1024w"
+            data-src="{{ $.Site.Params.imagekit_base_url }}tr:ar-1-1,w-350/{{ .Params.hero_img }} 768w"
+            class="lazyload gallery__img"
+            alt="{{ .Site.Params.name }}"
+            />
           </div>
           <div class="hero__cta--mobile">
             <a href="tel:{{ .Site.Params.schema.phone }}" class="button is-primary is-large">Call Now To Order</a>
